[tool.poetry]
name = "timerl"
version = "0.1.0"
description = ""
license = ""
authors = ["NemuiHito74 <nemuihito.jf@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^69.0.3"
wheel = "^0.42.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
pandas = "^2.2.0"
pyts = "^0.13.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
apscheduler = "^3.10.4"
pynvml = "^11.5.0"
einops = "^0.7.0"
optuna = "^3.5.0"
gymnasium = "^0.28.1"
scikit-learn = "^1.4.0"
array-record = { path = "./packages/array_record-0.5.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
tensorflow-datasets = "^4.9.4"
ray = {extras = ["all"], version = "^2.9.2"}
onnx = "^1.15.0"
onnxruntime-gpu = "^1.17.0"
onnxruntime-extensions = "^0.10.0"
onnx-simplifier = "^0.4.35"
netron = "^7.4.2"
mlflow = "^2.10.1"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
hydra-zen = "^0.12.1"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
marshmallow = "^3.20.2"
marshmallow-sqlalchemy = "^1.0.0"
grpcio = "^1.60.1"
grpcio-tools = "^1.60.1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
fastapi = "^0.108.0"
fastapi-login = "^1.9.3"
redis = "^5.0.1"
werkzeug = "^3.0.1"
flask = "^3.0.2"
flask-rq2 = "^18.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
flask-caching = "^2.1.0"
flask-wtf = "^1.2.1"
yfinance = "^0.2.36"


[tool.poetry.group.dev.dependencies]
tox = "^4.12.1"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
pytest-clarity = "^1.0.1"
pytest-profiling = "^1.7.0"
pytest-flask = "^1.3.0"
ipykernel = "^6.27.0"
taskipy = "^1.12.2"
flask-monitoringdashboard = "^3.2.2"


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]


[tool.taskipy.tasks]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
